hide scrollbars; fix html title

--- a/client/site/src/styles.less
+++ b/client/site/src/styles.less
@@ -1,10 +1,13 @@
-// some general styles, incentive was the background class
-
-.background {
-  background-position: center;
-  background-attachment: fixed;
+// some general styles
+html {
+  height: 100%;
   background-size: cover;
-  //height: 100%;
+  background-attachment: fixed;
+  background-position: center center;
+}
+
+::-webkit-scrollbar {
+  display: block;
 }
 
 @font-face {
@@ -22,8 +25,4 @@
   font-family: mic-32;
   font-style: normal;
   font-weight: 300;
-}
-
-#content {
-  margin-top: -10em;
 }
